test/errors/type/int/toint.yasl
echo mt.lookup(0, .toint)(1.0)
